# Lil-Sub

./: Cargo.toml
assets/debug/: fontdata.json  text.json
assets/mus/fl/corruption/: corruption.flp
assets/mus/fl/depths/: depths.flp
assets/mus/fl/depths/Backup/: depths (autosaved at 12h27).flp  depths (autosaved at 12h38).flp  depths (autosaved at 12h50).flp  depths (autosaved at 13h01).flp  depths (autosaved at 1h42).flp  depths (autosaved at 20h19).flp  depths (autosaved at 23h50).flp  depths (overwritten at 0h00).flp  depths (overwritten at 13h02).flp  depths (overwritten at 1h49).flp  depths (overwritten at 1h52).flp  depths (overwritten at 1h57).flp  depths (overwritten at 2h00).flp  depths (overwritten at 2h00)_2.flp  (+3 more)
assets/mus/fl/omonous/: omonous.flp
assets/sfx/: enemy_hit_med.ptnoise  enemy_hit_small.ptnoise  kill.ptnoise  water_drop.ptnoise
assets/sprites/aseprite_wip/: bombling.ase  clplws.aseprite  damagetext.ase  fat_fish_concepts.ase  gametitle.ase  goldfish.ase  heart_of_the_sea.ase  money,ase.aseprite  player.ase  player_and_enemy_concepts.ase  player_bullet.ase  shopdude.ase  smoke.ase  wave_text.ase
src/: components.rs  main.rs  resources.rs  systems.rs
src/collectables/: mod.rs  resources.rs  systems.rs
src/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/esbv_debug_menu/: components.rs  mod.rs  resources.rs  systems.rs
src/hud/: components.rs  mod.rs  systems.rs
src/particles/: components.rs  mod.rs  resources.rs  systems.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs
